--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@tanstack/react-query": "^5.61.0",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-cookie": "^7.2.2",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2"
   },
   "devDependencies": {
     "@types/node": "^20",
