--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.61.0",
+    "lodash": "^4.17.21",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
@@ -17,6 +18,7 @@
     "react-hook-form": "^7.53.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
